# netbox_slm

./: .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MAINTENANCE.md  MANIFEST.in  Pipfile  README.md  README.rst  SECURITY.md  pyproject.toml  setup.cfg  sonar-project.properties  start-netbox.sh
.github/workflows/: docker-image.yml  markdown-lint.yml  python.yml  zizmor-scan.yml
ci/: .vale.ini  Dockerfile  Dockerfile-CI  Dockerfile-SLM  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  plugin_requirements.txt  requirements_ci.txt
ci/config/: configuration.py
ci/configuration/: configuration.py  extra.py
ci/styles/config/vocabularies/Base/: accept.txt
netbox_slm/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_slm/api/: serializers.py  urls.py  views.py
netbox_slm/forms/: __init__.py  software_license.py  software_product.py  software_product_installation.py  software_product_version.py
netbox_slm/migrations/: 0003_auto_20220407_1209.py  0006_softwarelicense_stored_location_url.py  0007_softwareproductinstallation_cluster.py  0008_software_release_types_and_more.py  0009_softwareproductversion_description.py  0010_softwarelicense_spdx_expression.py
netbox_slm/templates/netbox_slm/: installations_card_include.html  softwarelicense.html  softwareproduct.html  softwareproductinstallation.html  softwareproductversion.html
netbox_slm/tests/: base.py  test_functional.py  test_models.py  test_smoke.py
netbox_slm/views/: __init__.py  software_license.py  software_product.py  software_product_installation.py  software_product_version.py
src/: MANIFEST.in  README.rst  SECURITY.md  setup.cfg  setup.py
src/netbox_slm/: __init__.py  admin.py  fields.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
src/netbox_slm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/netbox_slm/api/: serializers.py  urls.py  views.py
src/netbox_slm/migrations/: 0001_initial.py  0002_alter_softwareproduct_manufacturer.py  0002_softwareproductinstallation.py  0004_auto_20220415_0705.py
src/netbox_slm/templates/netbox_slm/: object.html  object_list.html  softwareproduct.html  softwareproductinstallation.html  softwareproductversion.html  version.html
